--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
 
 .parallax {
   /* The image used */
-  background-image: url(images/bg-img.jpg);
+  background-image: url(./images/bg-img.jpg);
   /* Set a specific height */
   min-height: 500px;
 
