--- a/styles.css
+++ b/styles.css
@@ -185,7 +185,7 @@ df-messenger{
 }
 
 
-@media screen and (min-width:1500px) {
+@media screen and (max-width:2000px) {
   .glass .glass-img img{
     width: 100vw;
     top: 400px;
