--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,8 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  width: 100%;
+  
 }
 
 
@@ -182,7 +184,7 @@ df-messenger{
 .glass .glass-img img{
   z-index: 1;
   width: 100vw;
-  top: 400px;
+  top: 40%;
   left: 0;
   height: 1200px;
   position: absolute;
@@ -192,7 +194,7 @@ df-messenger{
 @media screen and (min-width:1500px) {
   .glass .glass-img img{
     width: 100vw;
-    top: 40%;
+    top: 45%;
     height: 100%;
   }
 }
@@ -208,7 +210,7 @@ df-messenger{
 
 .glass-text{
   position: absolute;
-  top: 450px;
+  top: 20%;
   margin: 30% auto;
   left: 15%;
   z-index: 3;
