--- a/styles.css
+++ b/styles.css
@@ -188,11 +188,10 @@ df-messenger{
   left: 0;
   height: 1200px;
   position: absolute;
-  scale: 1.5;
 }
 
 
-@media screen and (min-width:1900px) {
+@media screen and (max-width:1900px) {
   .glass .glass-img img{
     width: 100vw;
     top: 60%;
