--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ body{
   justify-content: center;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
-  max-width: 100%;
+  /* overflow-x: hidden;
+  max-width: 100%; */
 
 }
 
@@ -226,6 +226,7 @@ df-messenger{
 @media screen and (min-width:1900px) {
   .glass-text{
     top: 10%;
+    width: 100%;
     left: 0;
 
   }
