--- a/styles.css
+++ b/styles.css
@@ -212,7 +212,7 @@ df-messenger{
   position: absolute;
   top: 20%;
   margin: 30% auto;
-  /* left: 15%; */
+  left: 15%;
   z-index: 3;
   color:#FF7A47;
   text-align: center;
@@ -221,11 +221,13 @@ df-messenger{
   font-weight: 400;
   font-style: normal;
   
+  
 }
 @media screen and (min-width:1800px) {
   .glass-text{
     top: 20%;
     width: 100%;
+    left: 0;
     overflow: hidden;
 
   }
